#10:More tidy up - Calendar table item width Fixed Navbar toggler not showing

--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,14 @@ table.changehistory{
   cursor: pointer
 }
 
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+
+.navbar-toggler {
+  background: rgba(255, 255, 255, 0.822); /* pick your color */
+}
+
 .triphub-form-help {
   color: seagreen;
   font-style: italic;
@@ -185,7 +193,7 @@ table.changehistory{
 }
 
 .calendar td {
-  width: 50px;
+  width: 30px;
   height: 30px;
   border-left: 1px solid darkgray;
   border-right: 1px solid darkgray;
